[gd_scene load_steps=6 format=2]

[ext_resource path="res://PreGameHUDRelated/StartingScreen/Assets/StartingScreen_WholeScreen_01.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=2]
[ext_resource path="res://PreGameHUDRelated/StartingScreen/StartingScreen.gd" type="Script" id=3]
[ext_resource path="res://Fonts/chivo/chivo.regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 4 )

[node name="StartingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Aesthetics" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
mouse_filter = 2

[node name="WholeScreen" type="TextureRect" parent="Aesthetics"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="Aesthetics"]
visible = false
margin_right = 960.0
margin_bottom = 540.0

[node name="ControlContent" type="MarginContainer" parent="."]
margin_left = 614.0
margin_top = 15.0
margin_right = 894.0
margin_bottom = 525.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ControlContent"]
margin_left = 50.0
margin_top = 50.0
margin_right = 230.0
margin_bottom = 460.0
mouse_filter = 2
custom_constants/separation = 40

[node name="PlayButton" parent="ControlContent/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 180.0
margin_bottom = 31.0
text_for_label = "Play"
border_texture = null
background_texture_normal = null
background_texture_highlighted = null
custom_font = SubResource( 1 )
custom_color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="TutorialButton" parent="ControlContent/VBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_top = 71.0
margin_right = 180.0
margin_bottom = 102.0
text_for_label = "Tutorial"
border_texture = null
background_texture_normal = null
background_texture_highlighted = null
custom_font = SubResource( 1 )
custom_color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="AlmanacButton" parent="ControlContent/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 71.0
margin_right = 180.0
margin_bottom = 102.0
text_for_label = "Almanac"
border_texture = null
background_texture_normal = null
background_texture_highlighted = null
custom_font = SubResource( 1 )
custom_color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ControlContent/VBoxContainer"]
margin_top = 333.0
margin_right = 180.0
margin_bottom = 410.0
size_flags_vertical = 10
custom_constants/separation = 15

[node name="AboutButton" parent="ControlContent/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 180.0
margin_bottom = 31.0
size_flags_vertical = 10
text_for_label = "About"
border_texture = null
background_texture_normal = null
background_texture_highlighted = null
custom_font = SubResource( 1 )
custom_color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="QuitButton" parent="ControlContent/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 46.0
margin_right = 180.0
margin_bottom = 77.0
size_flags_vertical = 10
text_for_label = "Quit"
border_texture = null
background_texture_normal = null
background_texture_highlighted = null
custom_font = SubResource( 1 )
custom_color = Color( 0.666667, 0.666667, 0.666667, 1 )

[node name="GeneralContainer" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
size_flags_horizontal = 2

[connection signal="on_button_released_with_button_left" from="ControlContent/VBoxContainer/PlayButton" to="." method="_on_PlayButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="ControlContent/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="ControlContent/VBoxContainer/AlmanacButton" to="." method="_on_AlmanacButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="ControlContent/VBoxContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="ControlContent/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_on_button_released_with_button_left"]
